<resources>
    <string name="app_name">RedditClone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_profile_page">Page</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_logout">Log out</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_profile_name_text">user_321528</string>
    <string name="comment_author_text">Author123</string>
    <string name="comment_content_text">Mom, I\'m famous!\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque.</string>
    <string name="post_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulu feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">Post Title here</string>
    <string name="post_tab_text">Current Post</string>
    <string name="comments_tab_text">Comments</string>
    <string name="karma_points">283</string>
    <string name="report_btn_text">REPORT</string>
    <string name="reply_btn_text">REPLY</string>
    <string name="splash_screen">RedditCloneApp Splashscreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>