<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/text_margin">

    <LinearLayout
        android:id="@+id/karmalayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_upvote"/>
        <TextView
            android:id="@+id/karmapoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/karma_points"
            android:layout_margin="@dimen/text_margin"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_downvote"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/profile_icon_round"/>
            <TextView
                android:id="@+id/commentauthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/comment_author_text"
                android:textAppearance="?attr/textAppearanceListItem" />
            <TextView
                android:id="@+id/reportcommentbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:gravity="right"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/report_btn_text"/>
            <TextView
                android:id="@+id/replytocommentbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:gravity="right"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/reply_btn_text"/>

        </LinearLayout>



        <TextView
            android:id="@+id/commentcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/comment_content_text"

            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

</LinearLayout>